force-app/main/default/objects/Opportunity/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Include</fullName>
                <default>true</default>
                <label>Include</label>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
            <value>
                <fullName>Include (Hidden)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>