force-app/main/default/objects/Opportunity/fields/VAT_in_Amount__c.field-meta.xml
<CustomField>
    <fullName>VAT_in_Amount__c</fullName>
    <formula>Total_With_Quantity__c  * ( VAT_Percentage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT in Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>