force-app/main/default/objects/Opportunity/recordTypes/Purchase_Order_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Order_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Purchase order flow</businessProcess>
    <label>Purchase</label>
</RecordType>