force-app/main/default/objects/Opportunity/recordTypes/Repeater.recordType-meta.xml
<RecordType>
    <fullName>Repeater</fullName>
    <active>true</active>
    <businessProcess>Repeater Flow</businessProcess>
    <label>Repeater</label>
</RecordType>