force-app/main/default/objects/Opportunity/recordTypes/Repeater_Bed_Head.recordType-meta.xml
<RecordType>
    <fullName>Repeater_Bed_Head</fullName>
    <active>false</active>
    <businessProcess>Repeater Flow</businessProcess>
    <label>Repeater Bed Head</label>
</RecordType>