force-app/main/default/objects/Opportunity/recordTypes/Repeater_Cable_Management.recordType-meta.xml
<RecordType>
    <fullName>Repeater_Cable_Management</fullName>
    <active>false</active>
    <businessProcess>Repeater Flow</businessProcess>
    <label>Repeater Cable Management</label>
</RecordType>