force-app/main/default/objects/Opportunity/recordTypes/Repeater_International.recordType-meta.xml
<RecordType>
    <fullName>Repeater_International</fullName>
    <active>false</active>
    <businessProcess>Repeater Flow</businessProcess>
    <label>Repeater International</label>
</RecordType>