force-app/main/default/objects/Opportunity/recordTypes/Repeater_Lighting_Automation.recordType-meta.xml
<RecordType>
    <fullName>Repeater_Lighting_Automation</fullName>
    <active>false</active>
    <businessProcess>Repeater Flow</businessProcess>
    <label>Repeater Lighting &amp; Automation</label>
</RecordType>