force-app/main/default/objects/Opportunity/recordTypes/Repeater_Non_Wired.recordType-meta.xml
<RecordType>
    <fullName>Repeater_Non_Wired</fullName>
    <active>false</active>
    <businessProcess>Repeater Flow</businessProcess>
    <label>Repeater Non-Wired</label>
</RecordType>