force-app/main/default/objects/Opportunity/recordTypes/Runner.recordType-meta.xml
<RecordType>
    <fullName>Runner</fullName>
    <active>true</active>
    <businessProcess>Runner Flow</businessProcess>
    <label>Runner</label>
</RecordType>