force-app/main/default/objects/Opportunity/recordTypes/Sales_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Sales_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Sales FLow</businessProcess>
    <label>Sales</label>
</RecordType>