force-app/main/default/objects/Opportunity/validationRules/Orl_stageName_v.validationRule-meta.xml
<ValidationRule>
    <fullName>Orl_stageName_v</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL(StageName, &apos;Closed Won&apos;), 
NOT(ISPICKVAL( SyncedQuote.Status , &apos;Activated&apos;)) )</errorConditionFormula>
    <errorMessage>Quote status should be &apos;Accepted&apos;.</errorMessage>
</ValidationRule>