force-app/main/default/objects/Opportunity/validationRules/Orl_Validation_for_Closed_Won_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Orl_Validation_for_Closed_Won_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>IF(( RecordType.DeveloperName= &quot;Purchase_Order_Opportunity&quot; ) , 
AND(
ISCHANGED(StageName ),
ISPICKVAL(PRIORVALUE(StageName ), &quot;Closed Won&quot;),

NOT(ISPICKVAL(StageName , &quot;Closed Won&quot;))),false)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>The Stage Should Not Move From Closed Won.</errorMessage>
</ValidationRule>