force-app/main/default/objects/Opportunity/validationRules/Orl_Validation_for_Proposal_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Orl_Validation_for_Proposal_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>IF((RecordType.DeveloperName = &quot;Purchase_Order_Opportunity&quot;), 
(AND(
ISCHANGED(StageName ),
ISPICKVAL(PRIORVALUE(StageName ), &quot;Proposal&quot;),
AND(
NOT(ISPICKVAL(StageName , &quot;Closed Won&quot;)),
NOT(ISPICKVAL(StageName , &quot;Closed Lost&quot;)))
)),
false)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Do not move to the Qualification Stage.</errorMessage>
</ValidationRule>