force-app/main/default/objects/Opportunity/validationRules/Orl_Validation_for_Stage_jump.validationRule-meta.xml
<ValidationRule>
    <fullName>Orl_Validation_for_Stage_jump</fullName>
    <active>false</active>
    <errorConditionFormula>IF((RecordType.DeveloperName = &quot;Purchase_Order_Opportunity&quot; ), 

 IF( (ISPICKVAL( StageName, &quot;Closed Won&quot;)) ,
  NOT((ISPICKVAL(PRIORVALUE(StageName), &quot;Proposal&quot;))) 
 , false) ,false)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Stage Should Not Move Directly To Closed Won</errorMessage>
</ValidationRule>