force-app/main/default/objects/Opportunity/validationRules/Pending_status_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pending_status_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Status__c , &quot;Pending&quot;),
    NOT(HasOpportunityLineItem)
)</errorConditionFormula>
    <errorMessage>Before Updating the Status to &apos;Pending&apos;, at least 1 product should be added.</errorMessage>
</ValidationRule>