force-app/main/default/objects/Opportunity/validationRules/Qualification_stage_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualification_stage_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISNEW(),
   NOT(ISPICKVAL(StageName, &apos;Qualification&apos;))
)</errorConditionFormula>
    <errorMessage>The Stage name should always be in the &apos;Qualification&apos;</errorMessage>
</ValidationRule>