force-app/main/default/objects/Opportunity/validationRules/Restrict_Deletion_of_Opp_Line_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Deletion_of_Opp_Line_Item</fullName>
    <active>true</active>
    <description>Prevents users from deleting opportunity products after an opportunity is closed.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(StageName, &quot;Closed Won&quot;),

ISPICKVAL(StageName, &quot;Closed Lost&quot;)),

Number_of_Line_Items__c &lt;

PRIORVALUE(Number_of_Line_Items__c) )</errorConditionFormula>
    <errorMessage>Opportunity Line Items cannot be deleted because the opportunity is closed.</errorMessage>
</ValidationRule>