force-app/main/default/objects/Opportunity/listViews/Purchase_Orders.listView-meta.xml
<ListView>
    <fullName>Purchase_Orders</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Purchase_Order_Opportunity</value>
    </filters>
    <label>Purchase Orders</label>
</ListView>